objects/gvp__Depletion__c.object
<CustomObject>
    <description>Cases leaving a Distributor or Control State&apos;s warehouse</description>
    <fields>
        <fullName>gvp__BDN_Adjustments__c</fullName>
        <label>BDN Adjustments</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Closing_Balance__c</fullName>
        <label>BDN Closing Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Created_Date__c</fullName>
        <label>BDN Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_In_Bond__c</fullName>
        <label>BDN In Bond</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_On_Order__c</fullName>
        <label>BDN On Order</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Opening_Balance__c</fullName>
        <label>BDN Opening Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Receipts__c</fullName>
        <label>BDN Receipts</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Transfers_In__c</fullName>
        <label>BDN Transfers In</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Transfers_Out__c</fullName>
        <label>BDN Transfers Out</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BDN_Wholesale_Sales__c</fullName>
        <label>BDN Wholesale Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <formula>gvp__Item__r.gvp__Label__r.gvp__Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Breakage__c</fullName>
        <description>Breakage - Month</description>
        <inlineHelpText>Breakage - Month</inlineHelpText>
        <label>Breakage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Cases_YTD__c</fullName>
        <formula>IF(MONTH(gvp__Date__c) &lt;= MONTH(TODAY()), gvp__Physical_Cases__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases (YTD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_1__c</fullName>
        <label>Custom Fact 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_2__c</fullName>
        <label>Custom Fact 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Depletion_Key__c</fullName>
        <externalId>true</externalId>
        <label>Depletion Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Distributor_Item_Number__c</fullName>
        <description>Item Number that comes from the Distributor via the data collection system.  Used to link data in GreatVines with data in the original source system.</description>
        <label>Distributor Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Distributor__c</fullName>
        <description>This field should be labeled as &quot;Account&quot; for wholesalers or &quot;Distributor&quot; for suppliers</description>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker, Control State LCB, Distributor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Goal__c</fullName>
        <formula>TEXT( MONTH(gvp__Date__c)) &amp;&quot;-&quot;&amp;   TEXT(YEAR(gvp__Date__c)) &amp;&quot;-&quot;&amp;gvp__Item__r.gvp__Label__r.gvp__Label_Key__c &amp;&quot;-&quot;&amp;   gvp__Distributor__r.gvp__Territory__r.gvp__Territory_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <formula>gvp__Item__r.gvp__Label__r.Name</formula>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Military_Off__c</fullName>
        <description>Military Off Premise - Month</description>
        <inlineHelpText>Military Off Premise - Month</inlineHelpText>
        <label>Military Off</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Military_On__c</fullName>
        <label>Military On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Month__c</fullName>
        <formula>MONTH(gvp__Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Non_Retail_Sales__c</fullName>
        <description>Non Retail Sales - Month</description>
        <inlineHelpText>Non Retail Sales - Month</inlineHelpText>
        <label>Non-Retail Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Physical_Cases__c</fullName>
        <label>Physical Cases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Samples__c</fullName>
        <description>Samples - Month</description>
        <label>Samples</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Source_File__c</fullName>
        <label>Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Sub_Distributor_Sales__c</fullName>
        <description>Sub Distributor Sales - Month</description>
        <label>Sub Distributor Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Supplier_Returns__c</fullName>
        <description>Supplier Returns - Month</description>
        <inlineHelpText>Supplier Returns - Month</inlineHelpText>
        <label>Supplier Returns</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Territory_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Goal</label>
        <referenceTo>gvp__Territory_Goal__c</referenceTo>
        <relationshipLabel>Depletions</relationshipLabel>
        <relationshipName>Depletions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Total_Off_Premise__c</fullName>
        <description>Total Off Premise - Month</description>
        <inlineHelpText>Total Off Premise - Month</inlineHelpText>
        <label>Total Off-Premise</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Total_On_Premise__c</fullName>
        <description>Total On Premise - Month</description>
        <inlineHelpText>Total On Premise - Month</inlineHelpText>
        <label>Total On-Premise</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Transportation__c</fullName>
        <description>Transportation - Month</description>
        <inlineHelpText>Transportation - Month</inlineHelpText>
        <label>Transportation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Unclassified_Sales__c</fullName>
        <description>Unclassified Sales - Month</description>
        <inlineHelpText>Unclassified Sales - Month</inlineHelpText>
        <label>Unclassified_Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__X9L_Cases__c</fullName>
        <label>9L Cases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Year__c</fullName>
        <formula>TEXT(YEAR( gvp__Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Depletion</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>NAME</columns>
        <columns>gvp__Date__c</columns>
        <columns>gvp__Physical_Cases__c</columns>
        <columns>gvp__Cases_YTD__c</columns>
        <columns>gvp__Distributor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>gvp__Amapola_Creek_Cab</fullName>
        <columns>NAME</columns>
        <columns>gvp__Date__c</columns>
        <columns>gvp__X9L_Cases__c</columns>
        <columns>gvp__Distributor__c</columns>
        <filterScope>Everything</filterScope>
        <label>Amapola Creek Cab</label>
    </listViews>
    <listViews>
        <fullName>gvp__Clos_Bernarde_Rouge</fullName>
        <columns>NAME</columns>
        <columns>gvp__Date__c</columns>
        <columns>gvp__X9L_Cases__c</columns>
        <columns>gvp__Distributor__c</columns>
        <filterScope>Everything</filterScope>
        <label>Clos Bernarde Rouge</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-{000000000}</displayFormat>
        <label>Depletion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depletions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>